fixed assignment according to rubric
