# controllers/users.js
@@ -19,10 +19,11 @@ const getSingle = async(req,res)=>{
 
 const createUser = async (req, res) => {
     const user = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
         email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
+        faveroiteColor: req.body.faveroiteColor,
+        birthday: req.body.birthday
     }
     const response = await mongodb.getDatabase().collection('users').insertOne(user)
 
@@ -37,10 +38,11 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
     const userId = new ObjectId(req.params.id)
     const user = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
         email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
+        faveroiteColor: req.body.faveroiteColor,
+        birthday: req.body.birthday
     }
     const response = await mongodb.getDatabase().collection('users').replaceOne({_id: userId}, user)
     if(response.modifiedCount > 0){
